--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -28,8 +28,9 @@ body {
 .global-message {
     color: var(--highlight-text);
     background-color: var(--BackgroundUncovered);
-    padding: 10px;
-    border-radius: 5px;
+    word-wrap: break-word;
+    /* padding: 10px;
+    border-radius: 5px; */
 }
 
 .global-link {
@@ -41,41 +42,61 @@ body {
     text-decoration: underline;
 }
 
-.global-btn {
-    font-size: 18px;
-    background-color: var(--button-bg);
-    padding: 10px 20px;
-    border-radius: 5px;
-    transition: background-color 0.3s;
-    border: 1px solid #4FAFC4;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    color: #20232A;
-}
-
-
-
 .global-btn:hover {
     background-color: var(--button-border);
     cursor: pointer;
 }
 
-.global-footer {
+/* .global-footer {
     text-align: center;
     font-size: 12px;
     color: var(--neutral-text);
     padding: 20px 0;
     
+} */
+
+.global-btn {
+    /* background-color: var(--button-bg); */
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-size: 11px;
+    /* transition: background-color 0.3s; */
+    /* border: 1px solid #4FAFC4; */
+    /* color: #20232A; */
+    height: 100%;
+    width: 100px; 
 }
 
 .global-toolbar {
     position: fixed;
-    top: 0;
-    background-color: rgb(17, 16, 17);
+    bottom: 0;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: rgb(17, 16, 17, 0.75);
+    height: 10%;
     width: 100%;
     color: var(--primary-text);
-    padding: 20px 0;
-    font-size: 20px;
-    text-align: center;
+}
+
+@media screen and (min-width: 1800px) {
+    /* if the viewport is 1800px or smaller */
+    
+
+}
+
+@media screen and (max-width: 900px) {
+    /* if the viewport is 900px or smaller */
+    /* .global-btn {
+        font-size: 14px;
+        width: auto;
+        height: 1rem;
+        padding: 10px;
+    } */
+
     
 }
 
