--- a/frontend/src/components/profile/profile.css
+++ b/frontend/src/components/profile/profile.css
@@ -39,6 +39,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    margin-bottom: 10vh;
 }
 
 .profile-account{
